@@ -186,10 +186,11 @@ typedef struct imp_sth_phb_st {
 typedef struct imp_sth_fbh_st {
     unsigned long  length;
     bool           is_null;
+    bool           is_unsigned;
     char           *data;
-    int           charsetnr; 
-    double        ddata;
-    long          ldata;
+    int            charsetnr;
+    double         ddata;
+    long           ldata;
 } imp_sth_fbh_t;
 
 
