@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.001)
+* Fix handling of signed integer values when using server-side prepared
+  statements (they were being forced to unsigned values).
 * Do not tell Perl that the contents of binary fields are UTF-8.
   [rt.cpan.org #22123], original patch by Joost Diepenmaat
 * Fix double-free of bound parameters when freeing statements. (Bug #20559)
